cmake_minimum_required(VERSION 3.6.2)
project(boost-high-performance-data-structures)
set(CMAKE_CXX_STANDARD 17)
set(Boost_USE_STATIC_LIBS ON)
set(BOOST_ROOT C:/Users/Boris/Documents/Boost)
#set(BOOST_ROOT /usr/local)
find_package(Boost REQUIRED COMPONENTS chrono system thread timer)
include_directories(${Boost_INCLUDE_DIRS})
link_libraries(${Boost_LIBRARIES})
add_subdirectory(01_list)
add_subdirectory(02_vector)
add_subdirectory(03_set)
add_subdirectory(04_flatset)
add_subdirectory(05_cache)
add_subdirectory(06_vector_with_object_pointers)
add_subdirectory(07_vector_with_objects)
add_subdirectory(08_vector_with_conrete_base_class)
add_subdirectory(09_base_collection_with_concrete_base_class)
add_subdirectory(10_base_collection_with_abstract_base_class)
add_subdirectory(11_vector_with_abstract_base_class)
add_subdirectory(12_vector_of_functions)
add_subdirectory(13_function_collection)
add_subdirectory(14_any_collection)
add_subdirectory(15_any_vector)
add_subdirectory(16_list_with_objects)
add_subdirectory(17_intrusive_list)
add_subdirectory(18_set_with_objects)
add_subdirectory(19_intrusive_set)
add_subdirectory(20_intrusive_splay_set)
add_subdirectory(21_intrusive_list_with_concrete_base_class)
add_subdirectory(22_intrusive_list_with_abstract_base_class)
add_subdirectory(23_list_with_fast_pool_allocator)
add_subdirectory(24_list_with_param_fast_pool_allocator)
add_subdirectory(25_queue_with_threads)
add_subdirectory(26_lockfree_queue_with_threads)
add_subdirectory(27_lockfree_spsc_queue_with_threads)
add_subdirectory(28_priority_queue)
add_subdirectory(29_binomial_heap)
add_subdirectory(30_fibonacci_heap)
